Integrate ES Connection
